--- a/frontend/src/sass/components/_rightSide.scss
+++ b/frontend/src/sass/components/_rightSide.scss
@@ -1,5 +1,7 @@
 .col-9{
     width: 100%;
+    overflow-x: hidden;
+    background-color: brown;
     .right-side{
         height: 100%;
         width: 100%;
